--- a/styles/about-us.css
+++ b/styles/about-us.css
@@ -34,7 +34,12 @@
 
 @media screen and (max-width: 991px) {
     .title-about-us {
+        font-size: 50px;
         padding-top: 40px;
-        margin-bottom: 0;
+        padding-bottom: 0px;
+    }
+
+    .main-about-us {
+        padding-bottom: 100px;
     }
 }
