--- a/styles/header.css
+++ b/styles/header.css
@@ -8,15 +8,14 @@ header {
     background-position: center;
 }
 
+.header {
+    background-color: rgba(0, 0, 0, .89);
+}
+
 .social a {
     color: #fff;
     font-size: 12px;
     margin: 10px;
-}
-
-.social {
-    padding-left: 20px;
-    margin-top: -50px;
 }
 
 .jump {
@@ -28,7 +27,7 @@ header {
 }
 
 .carousel {
-    margin-top: -400px;
+    margin-top: -420px;
     height: 100vh;
     color: #fff;
     margin-bottom: -200px;
@@ -65,6 +64,11 @@ header {
 
 .more-info:hover {
     color: #fff;
+}
+
+.carousel-control-prev,
+.carousel-control-next {
+    margin-bottom: 300px;
 }
 
 @media screen and (max-width: 991px) {
