--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,8 @@
 @import url('nav.css');
 @import url('header.css');
 @import url('about-us.css');
+@import url('service.css');
+
 
 @font-face {
   font-family: "Roboto";
