--- a/styles/main.css
+++ b/styles/main.css
@@ -2,6 +2,8 @@
 @import url('header.css');
 @import url('about-us.css');
 @import url('service.css');
+@import url('project.css');
+@import url('footer.css');
 
 
 @font-face {
