--- a/styles/service.css
+++ b/styles/service.css
@@ -33,6 +33,10 @@
     border-bottom: 2px solid #e3a062;
 }
 
+.learn-more:hover {
+    color: #fff;
+}
+
 .service-images {
     margin-top: 100px;
 }
@@ -88,6 +92,8 @@
 .text p {
     border-left: 4px solid #ffb611;
     padding: 0 10px;
+    text-align: center;
+    font-size: 15px;
 }
 
 .dws:hover .text {
