--- a/styles/main.css
+++ b/styles/main.css
@@ -4,6 +4,9 @@
 @import url('service.css');
 @import url('project.css');
 @import url('footer.css');
+@import url('testimonials.css');
+@import url('charger.css');
+@import url('empty.css');
 
 
 @font-face {
