--- a/styles/project.css
+++ b/styles/project.css
@@ -1,4 +1,19 @@
 .projects {
     width: 100%;
-    height: 1500px;
+    max-height: 3200px;
+    padding-bottom: 20px;
+}
+
+.title-projects {
+    color: #000000;
+    font-size: 35px;
+    font-weight: bold;
+    border-bottom: 2px solid #e3a062;
+}
+
+@media screen and (max-width: 450px) {
+    .row {
+        margin: 0;
+        padding: 0;
+    }
 }
