--- a/styles/project.css
+++ b/styles/project.css
@@ -7,7 +7,7 @@
 .title-projects {
     color: #000000;
     font-size: 35px;
-    font-weight: bold;
+    font-family: Merriweather;
     border-bottom: 2px solid #e3a062;
 }
 
