--- a/styles/header.css
+++ b/styles/header.css
@@ -1,6 +1,6 @@
 header {
     width: 100%;
-    height: 100vh;
+    min-height: 700px;
     display: flex;
     background-image: url(../img/header_img.jpg);
     background-color: rgba(0, 0, 0, .8);
@@ -26,14 +26,14 @@ header {
     color: #e3a062;
 }
 
-.carousel {
+.carousel-header {
     margin-top: -420px;
-    height: 100vh;
+    min-height: 650px;
     color: #fff;
     margin-bottom: -200px;
 }
 
-.carousel-item .about {
+.carousel-item-header .about {
     justify-content: center;
     align-items: center;
 }
@@ -47,6 +47,7 @@ header {
 
 .slogan {
     font-size: 87px;
+    font-family: Merriweather;
     color: #e3a062;
     line-height: 0.9em;
 }
@@ -66,37 +67,37 @@ header {
     color: #fff;
 }
 
-.carousel-control-prev,
-.carousel-control-next {
+.prev-header,
+.next-header {
     margin-bottom: 300px;
 }
 
 @media screen and (max-width: 991px) {
-    .carousel {
+    .carousel-header {
         margin-bottom: -100px;
     }
 }
 
 @media screen and (max-width: 767px) {
-    .carousel {
+    .carousel-header {
         margin-bottom: -150px;
     }
 }
 
 @media screen and (max-width: 411px) {
-    .carousel {
+    .carousel-header {
         margin-bottom: -200px;
     }
 }
 
 @media screen and (max-width: 360px) {
-    .carousel {
+    .carousel-header {
         margin-bottom: -250px;
     }
 }
 
 @media screen and (max-width: 320px) {
-    .carousel {
+    .carousel-header {
         margin-bottom: -150px;
     }
 }
