--- a/styles/main.css
+++ b/styles/main.css
@@ -7,6 +7,7 @@
 @import url('testimonials.css');
 @import url('charger.css');
 @import url('empty.css');
+@import url('contacts.css');
 
 
 @font-face {
@@ -46,4 +47,12 @@ body {
   font-family: Roboto;
   overflow-x: hidden;
   height: 100vh;
+}
+
+.letter {
+  font-size: 200px;
+  color: #e3a062;
+  max-height: 200px;
+  margin-top: -150px;
+  font-family: Merriweather-italic;
 }
