--- a/styles/testimonials.css
+++ b/styles/testimonials.css
@@ -29,6 +29,7 @@
 
 .title-testimonials {
     font-family: Merriweather-italic;
+    font-size: 45px;
 }
 
 .strip-testimonials {
@@ -44,4 +45,22 @@
 
 .name-car {
     font-size: 14px;
+}
+
+@media screen and (max-width: 991px) {
+    .title-testimonials {
+        font-size: 40px;
+    }
+}
+
+@media screen and (max-width: 700px) {
+    .title-testimonials {
+        font-size: 35px;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .title-testimonials {
+        font-size: 30px;
+    }
 }
