--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -1,7 +1,8 @@
 .contacts {
     width: 100%;
     max-height: 1200px;
-    background-image: url(../img/header_img.jpg);
+    background: url(../img/header_img.jpg) no-repeat center;
+    background-size: cover;
     background-color: rgba(0, 0, 0, .8);
     background-blend-mode: darken;
     background-position: center;
